--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -1,89 +1,102 @@
-
 .signup-container {
-    text-align: center;
-    max-width: 400px;
-    margin: 50px auto 0 auto;
-    padding: 30px 80px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .heading {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .subheading {
-    font-size: 14px;
-    margin-top: 10px;
-  }
-  
-  a {
-    color: #3c1053;
-    text-decoration: none;
-    font-weight: 700;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-    text-align: left;
-  }
-  
-  label {
-    display: block;
-    font-size: 16px;
-    margin-bottom: 5px;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="tel"],
-  input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border: 3px solid #3c1053;
-    border-radius: 5px;
-  }
-  
-  button[type="submit"] {
-    background-color: #3c1053;
-    color: #fff;
-    font-size: 18px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-  }
-  
-  button[type="submit"]:hover {
-    background-color: #3c1053;
-  }
+  text-align: center;
+  max-width: 400px;
+  margin: 50px auto 0 auto;
+  padding: 30px 80px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #b3adad29;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+.signup-container:hover{
+  box-shadow: 20px 20px 20px 20px rgba(0, 0, 0, 0.1);
+  transform: translateY(-5px);
+  background-color: #15121229;
+}
 
-  /* Navbar.css */
+.heading {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.subheading {
+  font-size: 14px;
+  margin-top: 10px;
+}
+
+a {
+  color: #3c1053;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.form-group {
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+label {
+  display: block;
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 3px solid #3c1053;
+  border-radius: 5px;
+}
+
+input[type="text"]:hover,
+input[type="email"]:hover,
+input[type="tel"]:hover,
+input[type="password"]:hover {
+  box-shadow: 10px 10px 10px 10px rgba(70, 9, 77, 0.1);
+  transform: translateY(-4px);
+  border-color: #7739a4; /* Change border color on hover */
+}
+
+button[type="submit"] {
+  background-color: #3c1053;
+  color: #fff;
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+button[type="submit"]:hover {
+  box-shadow: 10px 10px 10px 10px rgba(117, 35, 128, 0.1);
+  background-color: #7739a4;
+  color: black;
+  
+}
+
+/* Navbar.css */
 
 .navbar1 {
-    background-color: #3c1053;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 20px 4.5px;
-    margin-bottom: 10px;
-  }
-  
-  .navbar-heading1 {
-    font-size: 24px;
-    margin-right: 20px;
-    font-weight: 450;
-  }
-  
-  
-  
+  background-color: #3c1053;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px 4.5px;
+  margin-bottom: 10px;
+}
+
+.navbar-heading1 {
+  font-size: 24px;
+  margin-right: 20px;
+  font-weight: 450;
+}
