--- a/frontend/src/styles/Services.css
+++ b/frontend/src/styles/Services.css
@@ -42,11 +42,13 @@
   color: #5a287d;
   text-align: center;
   padding: 20px;
+  border-radius: 10px;
 }
 
 .flip-card-back {
   background-color: #5a287d;
   color: #fff;
   padding: 20px;
+  border-radius: 10px;
   transform: rotateY(180deg);
 }
