--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
+  width: 100%;
 }
 
 .navbar-left {
@@ -96,7 +97,6 @@
 
   .navbar-menu {
     flex-direction: column;
-
     align-items: center;
   }
 
@@ -121,12 +121,13 @@
   
   .hamburger-menu {
     display: flex;
-    position: fixed;
+
+    position: absolute;
     margin-left: 85%;
   }
 
   .hamburger-menu.active .bar:nth-child(1) {
-    transform: rotate(-50deg) translate(-5px, 6px);
+    transform: rotate(-50deg) translate(-6.5px, 6px);
   }
 
   .hamburger-menu.active .bar:nth-child(2) {
@@ -134,6 +135,6 @@
   }
   
   .hamburger-menu.active .bar:nth-child(3) {
-    transform: rotate(50deg) translate(-5px, -6px);
+    transform: rotate(50deg) translate(-6.5px, -6px);
   }
 }
