--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -1,11 +1,11 @@
 .signup-container {
   text-align: center;
-  max-width: 550px;
-  margin: 20px auto 0 auto;
+  max-width: 600px;
+  margin: 30px auto 30px auto;
   padding: 25px 80px;
-  border: 1px solid #ccc;
+  border: 1px solid #25232379;
   border-radius: 5px;
-  background-color: #b3adad29;
+  background-color:   #e9e7e7;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 .signup-container:hover{
@@ -17,16 +17,19 @@
 .heading {
   font-size: 24px;
   margin-bottom: 20px;
+  font-weight: bold;
+  color: #3c1053;
 }
 
 .subheading {
-  font-size: 14px;
+  font-size: 17px;
+  font-weight:500;
   margin-top: 10px;
+
 }
 
 .login {
   color: #3c1053;
-  text-decoration: none;
   font-weight: 700;
 }
 
@@ -41,8 +44,10 @@
 
 .label {
   display: block;
-  font-size: 16px;
+  font-size:16px;
+  font-weight: bold;
   margin-bottom: 5px;
+  color: #3c1053;
 }
 
   .name_field,
@@ -63,7 +68,7 @@
   .password_field:hover,
   .confirm_password_field:hover {
   box-shadow: 3px 3px 3px 3px rgba(70, 9, 77, 0.1);
-  transform: translateY(-4px);
+  transform: translateY(-1px);
   border-color: #7739a4; /* Change border color on hover */
 }
 
@@ -83,4 +88,28 @@
   background-color: #7739a4;
   color: black;
   
+}
+
+@media (max-width: 768px) {
+  .signup-container {
+    padding: 20px; /* Adjusted padding for smaller screens */
+    max-width: 75%; /* Container takes full width on smaller screens */
+  }
+
+  .form-group {
+    margin-bottom: 15px;
+    margin-left: 75px;
+  }
+
+  .name_field,
+  .email_field,
+  .phone_field,
+  .password_field,
+  .confirm_password_field {
+  width: 80%;
+  padding: 10px;
+  font-size: 16px;
+  border: 3px solid #3c1053;
+  border-radius: 5px;
+}
 }
