--- a/frontend/src/styles/SecuritySection.css
+++ b/frontend/src/styles/SecuritySection.css
@@ -24,3 +24,29 @@
   margin: 30px 0 50px 30px;
   font-size: 20px;
 }
+
+@media screen and (max-width: 768px) {
+  .security {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .securityHeader {
+    font-size: 40px;
+  }
+
+  .security-p {
+    width: 80%;
+    font-size: 20px;
+    margin: 0 0 20px;
+  }
+
+  .security-ul {
+    font-size: 16px;
+  }
+
+  .security-ul li {
+    margin-bottom: 10px;
+  }
+}
