--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -12,8 +12,12 @@
   display: flex;
   align-items: center;
 }
+.logo{
+  max-width: 150px;
+}
 
-.logo {
+.head {
+  display: flex;
   font-size: 24px;
   margin-left: 20px;
   text-decoration: none;
