--- a/frontend/src/styles/CurrentExchangeRates.css
+++ b/frontend/src/styles/CurrentExchangeRates.css
@@ -26,10 +26,12 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     width: 90%;
-    max-width: 500px;
+    text-align: center;
+    max-width: 475px;
     min-width: 400px;
     margin-left:20px;
     margin-top: 20px;
+    margin-right: 70px;
     font-family: "knilebold",sans-serif;
     color: #333;
   }
@@ -38,6 +40,7 @@
     font-size: 24px;
     margin-bottom: 20px;
     color: #3c1053;
+    font-weight: bold;
   }
   
   .currency-converter-card div {
@@ -45,10 +48,19 @@
   }
   
   /* Style input and select elements */
-  .styled-input,
-  select {
+  .styled-input{
     border: 3px solid #3c1053;
     padding: 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    width: 100px;
+    background-color: #fff;
+    margin-right: 10px;
+    color: #333;
+  }
+  select {
+    border: 3px solid #3c1053;
+    padding: 14px;
     font-size: 16px;
     border-radius: 5px;
     width: 100px;
@@ -59,7 +71,7 @@
   
   .styled-input:focus,
   select:focus {
-    border-color: #6c5ce7;
+    border-color:#5a287d;
     outline: none;
   }
   
@@ -67,6 +79,7 @@
     font-size: 20px;
     font-weight: bold;
     color: #3c1053;
+    padding-bottom: 20px;
   }
   
   .currency-converter-card p {
@@ -100,14 +113,20 @@
   }
 
   .currency-converter-card {
-    min-width: unset;
-    width: 80%;
-  }
+   min-width : 95%;
+   text-align: center;
 
-  .styled-input,
+  }
+  .currency-converter-card label{
+    padding-bottom: 20px;
+  }
+  .styled-input{
+    width: 25%;
+  }
   select {
-    width: 100%;
-    margin-right: 0;
+    width: 25%;
+    padding: 14px;
+    margin-top: 10px;
   }
 }
 
