--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -1,17 +1,22 @@
 
-
 .container1 {
   display: flex;
+  background-color: #56595f2e;
+  margin-top: -8px;
 }
 
 .sidebar {
   width: 300px;
-  background-color: #f5f5f5;
+  background-color: #56595f2e;
   color: #3c1053;
-  height: 650px;
+  height: 550px;
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 10px;
+  margin-left: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 .span{
   margin-right: 10px;
@@ -31,7 +36,7 @@
   background-color: #9377b8;
 }
 .sidebar-item:hover{
-  background-color: #e3dced;
+  background-color: #9377b8;
 }
 
 .main-content1 {
