--- a/frontend/src/styles/Dashboard/TransferMoney.css
+++ b/frontend/src/styles/Dashboard/TransferMoney.css
@@ -1,13 +1,13 @@
 /* TransferMoney.css */
 .card {
     text-align: center;
-    max-width: 500px;
     margin: 50px auto 0 auto;
     padding: 30px 80px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #b3adad29;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width:1100px;
   }
   
   .form-group {
@@ -21,8 +21,8 @@
   .form-group-label {
     font-weight: bold;
     display: block;
-  font-size: 16px;
-  margin-bottom: 5px;
+    font-size: 16px;
+    margin-bottom: 5px;
   }
   
   .form-group-input {
@@ -47,7 +47,7 @@
   
   .transfer-button:hover {
     box-shadow: 10px 10px 10px 10px rgba(117, 35, 128, 0.1);
-  background-color: #7739a4;
-  color: black;
+    background-color: #7739a4;
+    color: black;
   }
   
