feat,fix : (Eswar) added Transaction history and set up of dummy in dashboard components is over

--- a/frontend/src/styles/CurrentExchangeRates.css
+++ b/frontend/src/styles/CurrentExchangeRates.css
@@ -98,6 +98,10 @@
   .currency-converter-card:hover{
     transform: translateY(-1.5px);
   }
+  .resultant{
+    /* font-size:50px; */
+    font-weight:700;
+  }
 
   /* Add responsive styles */
 @media screen and (max-width: 768px) {
