--- a/frontend/src/styles/Services.css
+++ b/frontend/src/styles/Services.css
@@ -40,8 +40,8 @@
 
 .flip-card-front {
   display: flex;
-  background-color: #f2eaf9;
-  color: #5a287d;
+  background-color: #000;
+  color: #f2eaf9;
   text-align:center;
   justify-content: center;
   align-items: center;
@@ -60,6 +60,35 @@
   border-radius: 10px;
   transform: rotateY(180deg);
 }
+
+.card-img-1{
+  background-image: url('https://www.esds.co.in/home-images/digital-banking/iotBnk.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  box-shadow: inset 0 0 0 2000px rgb(0,0,0,0.6);
+}
+
+.card-img-2{
+  background-image: url('https://www.miles33.com/resizer/960/-1/true/1429081697483.jpeg--multiple_currencies.jpeg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 0 2000px rgb(0,0,0,0.6);  
+}
+
+.card-img-3{
+  background-image: url('https://elogic.co/wp-content/uploads/2021/08/cybersecurity-lock.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  box-shadow: inset 0 0 0 2000px rgb(0,0,0,0.6);
+}
+
+.card-img-back{
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSexzHnBWZDAQiuIYv-zluWzjchqTt08vLYDpNzExO7GbdG3Ibku5E7H5_9mldGfrAIrg8');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  box-shadow: inset 0 0 0 2000px rgb(0,0,0,0.6);
+}  
 
 @media screen and (max-width: 768px) {
   .container {
