--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -3,20 +3,27 @@
   display: flex;
   background-color: #56595f2e;
   margin-top: -8px;
+  height: 100%;
+  
 }
 
 .sidebar {
   width: 300px;
   background-color: #56595f2e;
   color: #3c1053;
-  height: 550px;
-  display: inline-flex;
-  justify-content: space-between;
-  align-items: center;
+  height: 100vh;
+  flex: 0 0 auto;
   border-radius: 10px;
-  margin-left: 15px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px 0px 20px 15px;
+  padding: 30px 0px 0px;
+  overflow-y: auto;
+  transition: width 0.3s ease-in-out;
+  
+}
+.sidebar-closed{
+  width: 0;
+  overflow: hidden;
+  padding: 0;
 }
 .span{
   margin-right: 10px;
@@ -26,10 +33,8 @@
   font-size: 18px;
   cursor: pointer;
   padding: 15px 25px 15px 30px;
-  margin-left: 20px;
-  margin-right: 20px;
-  border-radius: 10px;
-  margin-bottom: 5px;
+  border-radius: 20px;
+  margin: 0px 20px 5px 20px;
 }
 
 .sidebar-item.selected {
@@ -40,14 +45,41 @@
 }
 
 .main-content1 {
-  flex-grow: 1;
+  flex: 1;
   padding: 20px;
+  position: relative;
+  overflow: auto;
 }
 
 .content {
   background-color: #fff;
-  padding: 20px;
+  padding: 10px;
   border-radius: 4px;
+  overflow-x: auto;
+}
+.sidebar-toggle {
+  text-align: left;
+  width: 40px;
+  padding: 10px;
+  cursor: pointer;
+  color: #3c1053;
+  margin: 20px 0px 0px 20px;
+  font-size: 25px;
+  border-radius: 10px;
+  position: relative;
+  z-index:999;
+}
+.sidebar-toggle:hover{
+  background-color: #9377b8;
+  margin-right: 0px;
+}
+
+.toggle-icon {
+  transition: transform 0.3s ease-in-out;
+}
+
+.toggle-icon.open {
+  transform: rotate(180deg);
 }
 
 @media screen and (max-width: 924px) {
@@ -58,8 +90,11 @@
   .sidebar {
     width: 100%;
     padding-top: 20px; 
-    flex-direction: column;
+    padding-left: 20px;
+    padding-right: 500px;
+    position: static;
     align-items: center;
+    height: auto;
     
   }
 
@@ -69,6 +104,7 @@
     margin-left: 0;
   }
   .main-content {
-    padding: 10px; /* Reduce padding for smaller screens */
+    padding: 10px; 
   }
+
 }
