--- a/frontend/src/styles/Dashboard/TransferMoney.css
+++ b/frontend/src/styles/Dashboard/TransferMoney.css
@@ -7,7 +7,7 @@
     border-radius: 5px;
     background-color: #b3adad29;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width:1100px;
+    width:auto;
   }
   
   .form-group {
@@ -50,4 +50,3 @@
     background-color: #7739a4;
     color: black;
   }
-  
