--- a/frontend/src/styles/Dashboard/TransferMoney.css
+++ b/frontend/src/styles/Dashboard/TransferMoney.css
@@ -1,52 +1,113 @@
 /* TransferMoney.css */
 .card {
-    text-align: center;
-    margin: 50px auto 0 auto;
-    padding: 30px 80px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #b3adad29;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width:auto;
-  }
-  
-  .form-group {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-bottom: 15px;
-    text-align: left;
-  }
-  
-  .form-group-label {
-    font-weight: bold;
-    display: block;
-    font-size: 16px;
-    margin-bottom: 5px;
-  }
-  
-  .form-group-input {
-    width: 100%;
+  text-align: center;
+  margin: 50px auto 0 auto;
+  padding: 30px 80px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #b3adad29;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  max-width: 700px;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.form-group-label {
+  font-weight: bold;
+  display: block;
+  font-size: 17px;
+  margin-bottom: 5px;
+}
+
+.form-group-input {
+  width: 100%;
   padding: 10px;
   font-size: 16px;
   border: 3px solid #3c1053;
   border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.transfer-button {
+  background-color: #3c1053;
+  color: #fff;
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  width: 40%;
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+.transfer-button:hover {
+  box-shadow: 10px 10px 10px 10px rgba(117, 35, 128, 0.1);
+  background-color: #7739a4;
+  color: black;
+}
+
+.form-group-input-amount{
+  width: 78%;
+  padding: 10px;
+  margin-right: 14px;
+  font-size: 16px;
+  border: 3px solid #3c1053;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.form-group-input-select{
+  width: 100px;
+  height: 51px;
+  padding: 10px; 
+}
+
+.conversion{
+  text-align: center;
+  font-size: 15px;
+  font-weight: 540;
+}
+
+.conversion > hr{
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 768px) {
+  .card {
+    padding: 10px;
   }
-  
+
+  .form-group-input,
+  .form-group-input-amount,
+  .form-group-input-select {
+    font-size: 14px;
+  }
+
+  .form-group-input-amount{
+    width: 60%;
+  }
+
   .transfer-button {
-    background-color: #3c1053;
-    color: #fff;
-    font-size: 18px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-    width: 50%;
+    font-size: 16px;
   }
-  
-  .transfer-button:hover {
-    box-shadow: 10px 10px 10px 10px rgba(117, 35, 128, 0.1);
-    background-color: #7739a4;
-    color: black;
+
+  .conversion {
+    font-size: 14px;
   }
+  .conversion > hr{
+    max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
