--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -1,101 +1,110 @@
-
 .container1 {
   display: flex;
-  background-color: #56595f2e;
   margin-top: -8px;
-  height: 100%;
-  
+  height: auto;
+  background-color: #56595f2e;
+  width: auto;
+}
+
+.whole-sidebar {
+  background-color: #5c327e;
+  height: auto;
 }
 
 .sidebar {
   width: 300px;
-  background-color: #56595f2e;
-  color: #3c1053;
-  height: 100vh;
+  background-color: #5c327e;
+  color: white;
+  height: 100%;
   flex: 0 0 auto;
-  border-radius: 10px;
-  margin: 20px 0px 20px 15px;
-  padding: 30px 0px 0px;
+  margin: 0px 0px 20px 0px;
+  padding: 0px 0px 0px;
   overflow-y: auto;
   transition: width 0.3s ease-in-out;
-  
+
 }
-.sidebar-closed{
+
+.sidebar-closed {
   width: 0;
   overflow: hidden;
   padding: 0;
 }
-.span{
+
+.span {
   margin-right: 10px;
 }
 
 .sidebar-item {
   font-size: 18px;
   cursor: pointer;
-  padding: 15px 25px 15px 30px;
+  padding: 10px 25px 15px 30px;
   border-radius: 20px;
   margin: 0px 20px 5px 20px;
 }
 
 .sidebar-item.selected {
-  background-color: #9377b8;
+  background-color: #3c1053;
 }
-.sidebar-item:hover{
-  background-color: #9377b8;
+
+.sidebar-item:hover {
+  background-color: #3c1053;
 }
 
 .main-content1 {
   flex: 1;
-  padding: 20px;
-  position: relative;
-  overflow: auto;
+  width: auto;
+  height: auto;
+ overflow: auto;
 }
 
 .content {
-  background-color: #fff;
   padding: 10px;
   border-radius: 4px;
   overflow-x: auto;
 }
+
 .sidebar-toggle {
   text-align: left;
   width: 40px;
   padding: 10px;
   cursor: pointer;
-  color: #3c1053;
-  margin: 20px 0px 0px 20px;
+  color: white;
+  margin: 20px 20px 0px 35px;
   font-size: 25px;
-  border-radius: 10px;
+  border-radius: 5px;
   position: relative;
-  z-index:999;
+  display: flex;
+  z-index: 999;
 }
-.sidebar-toggle:hover{
-  background-color: #9377b8;
-  margin-right: 0px;
+
+.sidebar-toggle:hover {
+  background-color: #3c1053;
 }
 
 .toggle-icon {
   transition: transform 0.3s ease-in-out;
+
 }
 
 .toggle-icon.open {
   transform: rotate(180deg);
+
 }
 
 @media screen and (max-width: 924px) {
   .container1 {
-    flex-direction:column;
+    flex-direction: column;
   }
 
   .sidebar {
     width: 100%;
-    padding-top: 20px; 
+    padding-top: 20px;
     padding-left: 20px;
     padding-right: 500px;
     position: static;
     align-items: center;
     height: auto;
-    
+
   }
 
   .sidebar-item {
@@ -103,8 +112,9 @@
     right: 0;
     margin-left: 0;
   }
+
   .main-content {
-    padding: 10px; 
+    padding: 10px;
   }
 
 }
