feat: Raji added your Account page

--- a/frontend/src/styles/Dashboard/Support.css
+++ b/frontend/src/styles/Dashboard/Support.css
@@ -21,7 +21,7 @@
   .support-container {
     background-color: white;
     border-radius: 3px;
-    margin: 30px 20px;
+    margin: 30px 20px 0px 20px;
   }
 
   .issue_input {
