--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -3,7 +3,6 @@
   margin-top: -8px;
   height: auto;
   background-color: #56595f2e;
-  width: auto;
 }
 
 .whole-sidebar {
@@ -28,6 +27,7 @@
   width: 0;
   overflow: hidden;
   padding: 0;
+  height: auto;
 }
 
 .span {
@@ -53,7 +53,7 @@
 .main-content1 {
   flex: 1;
   width: auto;
-  height: auto;
+  height: 100%;
  overflow: auto;
 }
 
