--- a/frontend/src/styles/Dashboard/TransferMoney.css
+++ b/frontend/src/styles/Dashboard/TransferMoney.css
@@ -1,9 +1,21 @@
-/* TransferMoney.css */
+.signup-container-1{
+  text-align: center;
+  max-width: 700px;
+  margin: auto;
+  padding: 25px 80px;
+  border: 1px solid #25232379;
+  border-radius: 5px;
+  background-color:   #e9e7e7;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 .card {
   text-align: center;
-  margin: 50px auto 0 auto;
+  margin:auto;
   padding: 30px 80px;
-  border: 1px solid #ccc;
+  border: 3px solid #ccc;
   border-radius: 5px;
   background-color: #b3adad29;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -45,8 +57,7 @@
   cursor: pointer;
   transition: background-color 0.2s;
   width: 40%;
-  margin-left: 150px;
-  margin-right: 150px;
+  margin: auto;
 }
 
 .transfer-button:hover {
@@ -84,9 +95,12 @@
 }
 
 @media (max-width: 768px) {
-  .card {
-    padding: 10px;
-  }
+
+  /* TransferMoney.css */
+.transfer-money{
+  margin: auto;
+  max-width: 60%;
+}
 
   .form-group-input,
   .form-group-input-amount,
