--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -90,15 +90,27 @@
   
 }
 
+.signup-container-createAccount{
+  text-align: center;
+  max-width: 700px;
+  margin: 50px auto 30px auto;
+  padding: 25px 80px;
+  border: 1px solid #25232379;
+  border-radius: 5px;
+  /* background-color:   #e9e7e7; */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+.create-account-container{
+  background-color: #56595f2e;
+  padding-bottom: 2rem;
+  padding-top: 0.5rem;
+  margin-top: -8px;
+}
+
 @media (max-width: 768px) {
   .signup-container {
     padding: 20px; /* Adjusted padding for smaller screens */
     max-width: 75%; /* Container takes full width on smaller screens */
-  }
-
-  .form-group {
-    margin-bottom: 15px;
-    margin-left: 75px;
   }
 
   .name_field,
@@ -106,10 +118,20 @@
   .phone_field,
   .password_field_register,
   .confirm_password_field {
-  width: 80%;
+  width: 100%;
   padding: 10px;
   font-size: 16px;
   border: 3px solid #3c1053;
   border-radius: 5px;
+}
+.signup-container-createAccount{
+  text-align: center;
+  max-width: 500px;
+  margin: 30px auto 30px auto;
+  padding: 25px 80px;
+  border: 1px solid #25232379;
+  border-radius: 5px;
+  background-color:   #e9e7e7;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 }
