--- a/frontend/src/styles/Dashboard/MoreInfo.css
+++ b/frontend/src/styles/Dashboard/MoreInfo.css
@@ -52,7 +52,7 @@ h2 {
     margin-top: 10px;
 }
 
-p {
+p8 {
     font-size: 16px;
     color: #333;
 }
@@ -72,7 +72,7 @@ p {
         font-size: 16px;
     }
 
-    p {
+    p8 {
         font-size: 14px;
     }
 }
