--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -16,8 +16,7 @@
   color: white;
   height: auto;
   flex: 0 0 auto;
-  margin: 0px 0px 20px 0px;
-  padding: 0px 0px 0px;
+  margin: 8px 0px 20px 0px;
   overflow-y: auto;
   transition: width 0.3s ease-in-out;
 
@@ -27,7 +26,7 @@
   width: 0;
   overflow: hidden;
   padding: 0;
-  height: auto;
+  max-height: 400px;
 }
 
 .span {
@@ -53,8 +52,9 @@
 .main-content1 {
   flex: 1;
   width: auto;
-  height: 100%;
- overflow: auto;
+  height: auto;
+  overflow: auto;
+  margin-bottom: 15px;
 }
 
 .content {
@@ -75,7 +75,6 @@
   position: relative;
   display: flex;
   z-index: 999;
-  /* height: auto; */
 }
 
 .sidebar-toggle:hover {
