--- a/frontend/src/styles/Dashboard/Support.css
+++ b/frontend/src/styles/Dashboard/Support.css
@@ -22,6 +22,21 @@
     background-color: white;
     border-radius: 3px;
     margin: 30px 20px 0px 20px;
+    max-height: 600px;
+    overflow-y: auto;
+  }
+
+  .support-container::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  .support-container::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  .support-container::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
   }
 
   .issue_input {
