--- a/frontend/src/styles/Dashboard/DepositWithdraw.css
+++ b/frontend/src/styles/Dashboard/DepositWithdraw.css
@@ -63,9 +63,9 @@
   }
   
   .transfer-button:hover {
-    box-shadow: 10px 10px 10px 10px rgba(117, 35, 128, 0.1);
+    box-shadow: 5px 5px 5px 5px rgba(117, 35, 128, 0.1);
     background-color: #7739a4;
-    color: black;
+    color: #fff;
   }
   
   .form-group-input-amount{
