--- a/frontend/src/styles/Dashboard/Settings.css
+++ b/frontend/src/styles/Dashboard/Settings.css
@@ -1,28 +1,32 @@
 .user-profile-form {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-  }
-  
-  .user-profile-form div {
-    margin-bottom: 10px;
-  }
+  text-align: center;
+  max-width: 600px;
+  margin: auto;
+  padding: 25px 80px;
+  border: 1px solid #25232379;
+  border-radius: 5px;
+  background-color: #e9e7e7;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 30px;
+  margin-bottom: 30px;
+  } 
   
   .user-profile-form label {
-    display: block;
     font-weight: bold;
+    display: block;
+    font-size: 17px;
     margin-bottom: 5px;
+    text-align: left;
   }
   
   .user-profile-form input {
     width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    padding: 10px;
     font-size: 16px;
+    border: 3px solid #3c1053;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
   
   .user-profile-form button {
