--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -91,7 +91,7 @@
 
 }
 
-@media screen and (max-width: 924px) {
+@media screen and (max-width: 850px) {
   .container1 {
     flex-direction: column;
   }
@@ -100,7 +100,6 @@
     width: 100%;
     padding-top: 20px;
     padding-left: 20px;
-    padding-right: 500px;
     position: static;
     align-items: center;
     height: auto;
@@ -109,8 +108,15 @@
 
   .sidebar-item {
     padding: 15px;
-    right: 0;
-    margin-left: 0;
+  }
+
+  .sidebar-item.selected {
+    padding-right: 50px;
+  }
+
+  .sidebar-closed {
+    margin: 0;
+    max-height: 0;
   }
 
   .main-content {
