--- a/frontend/src/styles/Dashboard/Support.css
+++ b/frontend/src/styles/Dashboard/Support.css
@@ -117,7 +117,6 @@
   .side-container {
     display: flex;
     justify-content: space-between;
-    background-color: none;
     color: #3c1053;
     border-radius: 3px;
     background-color: #ccc;
@@ -135,7 +134,6 @@
     margin-right: 5px;
     background-color: white;
     margin-left: 10px;
-    margin-bottom: 0px;
   }
 
   .box-right {
@@ -145,8 +143,7 @@
     text-align: center;
     background-color: white;
     margin-left: 5px;
-    margin-right: 10px;
-
+    margin-right: 5px;
   }
 
   .box-left .box-right img {
@@ -160,6 +157,7 @@
   }
 
   .box-right img {
+    max-width: 100%;
     height: 200px;
     width: 300px;
     margin-top: 10px;
@@ -179,4 +177,11 @@
     color: #0056b3;
     cursor: pointer;
     text-decoration-line: underline;
+  }
+
+  @media screen and (max-width: 1220px) {
+    .support-header {
+      height: 350px;
+    }
+
   }
