--- a/frontend/src/styles/Dashboard/YourAccount.css
+++ b/frontend/src/styles/Dashboard/YourAccount.css
@@ -1,8 +1,9 @@
 .account-container {
-  display:flex;
+  display: flex;
   justify-content: space-evenly;
   padding: 20px;
   margin-top: 120px;
+  margin-bottom: 100px;
 }
 
 .acc-card {
@@ -11,7 +12,7 @@
   padding: 40px;
   border-radius: 8px;
   cursor: pointer;
- height: 100%;
+  height: 100%;
 }
 
 .acc-card h2 {
@@ -42,4 +43,11 @@
 .acc-card:hover h2,
 .acc-card:hover p {
   color: #fff;
+}
+
+@media screen and (max-width: 1037px) {
+
+  .acc-card {
+    padding: 30px
+  }
 }
