--- a/frontend/src/styles/Dashboard/TransactionHistory.css
+++ b/frontend/src/styles/Dashboard/TransactionHistory.css
@@ -48,7 +48,7 @@
     border-bottom: 1px solid #5a287d; /* Add border to the last row */
   }
 
-  button {
+  .individual-button {
     background-color: #3c1053;
     color: #fff;
     font-size: 18px;
@@ -56,7 +56,6 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-left: 20px;
     transition: background-color 0.2s;
     margin-left: 10px;
   }
@@ -73,6 +72,16 @@
   .pagination-buttons {
     text-align: right;
     margin-top: 10px;
+  }
+  .NoTransactionYet{
+    display: flex;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    padding: 30px;
+    margin-left: 30px;
+    color: #3c1053;
   }
 
   @media (max-width: 768px) {
