--- a/frontend/src/styles/MyFAQ.css
+++ b/frontend/src/styles/MyFAQ.css
@@ -6,8 +6,9 @@
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   display: flex;
+  width: 100%;
   flex-direction: column;
-  align-items: center;
+  align-items:center ;
 }
 
 .MyFAQ-header {
@@ -31,8 +32,8 @@
   font-family: "knilebold", sans-serif;
   color: #fff;
   border: none;
-  border-radius: 20px;
-  padding: 10px 40px; 
+  border-radius: 5px;
+  padding: 10px 10px; 
   cursor: pointer;
   font-size: 24px; 
 }
@@ -43,11 +44,11 @@
 }
 
 .MyFAQ-list {
-  width: 50%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   font-family: "knilebold", sans-serif;
-  align-items: flex-start;
+  align-items: baseline;
 }
 .MyFAQ-item {
   width: 100%;
@@ -55,7 +56,7 @@
   display: flex;
   font-family: "knilebold",sans-serif;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .MyFAQ-question {
@@ -97,7 +98,7 @@
 
 .left-image,
 .right-image {
-  width: 50%;
+  width: auto;
   font-family: "knilebold",sans-serif;
   max-width: 200px;
   margin: 10px;
