feat/fix: (Eswar) Same account transfer is enabled, deposit is functional and added new routings and fixed few stylings

--- a/frontend/src/styles/Dashboard/PersonalProfile.css
+++ b/frontend/src/styles/Dashboard/PersonalProfile.css
@@ -11,9 +11,11 @@
   }
   
   .profile-header {
-    font-size: 24px;
-    color: #5c327e;
-    margin-bottom: 20px;
+    font-size: 28px;
+    text-align: center;
+    color: #5c327e; /* Purple color */
+    font-weight: bold;
+    margin-top: 5px;
   }
   
   .profile-details {
@@ -46,6 +48,8 @@
     text-align: center;
     color: #5c327e; /* Purple color */
     font-weight: bold;
+    margin-top: 20px;
+    /* padding-top: 10x; */
   }
   
   
