--- a/frontend/src/styles/Dashboard/TransactionHistory.css
+++ b/frontend/src/styles/Dashboard/TransactionHistory.css
@@ -7,7 +7,7 @@
     border: 3px solid #5a287d;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    max-width: auto;
+    max-width: 100%;
     margin: auto;
     margin-top: 50px;
   }
