--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -1,33 +1,30 @@
-/* Apply styles to the entire login page */
 .login-page {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; /* Use min-height for better responsiveness */
-  background-color: #b3adad29; /* Use the same background color as in Register.css */
+  height: 100vh; 
+  background-color: #b3adad29;/* Adjust the height to your preference */ /* Use the same background color as in Register.css */
 }
 
 /* Apply styles to the login card container */
 .login-card {
   text-align: center;
   max-width: 500px;
-  padding: 30px 20px; /* Adjust padding for smaller screens */
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #b3adad29; /* Use the same background color as in Register.css */
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  padding: 30px 80px;
+  background-color: #b3adad29;
+  border: 1px solid #25232379;
+  border-radius: 5px; /* Use the same background color as in Register.css */
 }
 
-.login-card:hover {
-  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.1);
-  transform: translateY(-5px);
+.login-card:hover{
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
+  transform: translateY(-3px);
   background-color: #15121229;
 }
-
 /* Apply styles to the login card heading */
 .login-card h1 {
   font-size: 24px;
-  margin-bottom: 20px; /* Reduce margin for smaller screens */
+  margin-bottom: 40px;
   font-weight: bold;
   color: #3c1053;
 }
@@ -40,7 +37,7 @@
 /* Apply styles to form labels */
 .login-card label {
   display: block;
-  font-size: 16px;
+  font-size:16px;
   text-align: left;
   font-weight: bold;
   margin-bottom: 5px;
@@ -60,8 +57,8 @@
 }
 
 /* Apply hover effect to input fields */
-.password_field:hover,
-.username_field:hover {
+ .password_field:hover,
+ .username_field:hover {
   box-shadow: 5px 5px 5px 5px rgba(70, 9, 77, 0.1);
   transform: translateY(-1px);
   border-color: #7739a4; /* Change border color on hover */
@@ -84,11 +81,11 @@
   box-shadow: 5px 5px 5px 5px rgba(117, 35, 128, 0.1);
   background-color: #7739a4;
   color: #fff;
+  
 }
-
 /* Apply styles to the paragraph below the form */
 .login-card p {
-  font-size: 18px;
+  font-size: 14px;
   margin-top: 20px;
   font-weight: bold; /* Make the paragraph text bold */
 }
@@ -103,15 +100,4 @@
 /* Apply hover effect to links */
 .login-card a:hover {
   text-decoration: underline;
-}
-
-/* Responsive adjustments for smaller screens */
-@media (max-width: 768px) {
-  .login-card {
-    padding: 20px; /* Adjusted padding for smaller screens */
-  }
-
-  .login-card h1 {
-    margin-bottom: 10px; /* Further reduce margin for smaller screens */
-  }
 }
