--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -101,3 +101,24 @@
 .login-card a:hover {
   text-decoration: underline;
 }
+
+
+@media (max-width: 768px) {
+  
+  .login-card {
+    text-align: center;
+    max-width: 400px;
+    padding: 30px 60px;
+    background-color: #b3adad29;
+    border: 1px solid #25232379;
+    border-radius: 5px; /* Use the same background color as in Register.css */
+  }
+  .password_field,
+.username_field {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 3px solid #3c1053;
+  border-radius: 5px;
+}
+}
