--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -112,13 +112,23 @@
     padding: 20px; /* Adjusted padding for smaller screens */
     max-width: 75%; /* Container takes full width on smaller screens */
   }
+  .label {
+    display: block;
+    font-size:16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #3c1053;
+    margin-left: 50px;
+  }
 
   .name_field,
   .email_field,
   .phone_field,
   .password_field_register,
   .confirm_password_field {
-  width: 100%;
+  width: 80%;
+  align-self: center;
+  text-align: center;
   padding: 10px;
   font-size: 16px;
   border: 3px solid #3c1053;
@@ -134,4 +144,14 @@
   background-color:   #e9e7e7;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
+}
+@media (max-width: 480px){
+  .label {
+    display: block;
+    font-size:16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #3c1053;
+    margin-left: 30px;
+  }
 }
