feat: (Raji) added popup

--- a/frontend/src/styles/Register/Register.css
+++ b/frontend/src/styles/Register/Register.css
@@ -10,7 +10,6 @@
 }
 .signup-container:hover{
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
-  transform: translateY(-3px);
   background-color: #15121229;
 }
 
@@ -68,7 +67,6 @@
   .password_field_register:hover,
   .confirm_password_field:hover {
   box-shadow: 3px 3px 3px 3px rgba(70, 9, 77, 0.1);
-  transform: translateY(-1px);
   border-color: #7739a4; /* Change border color on hover */
 }
 
@@ -120,7 +118,9 @@
     color: #3c1053;
     margin-left: 50px;
   }
-
+.form-group{
+  text-align: left;
+}
   .name_field,
   .email_field,
   .phone_field,
@@ -128,7 +128,7 @@
   .confirm_password_field {
   width: 80%;
   align-self: center;
-  text-align: center;
+  /* text-align: center; */
   padding: 10px;
   font-size: 16px;
   border: 3px solid #3c1053;
@@ -145,6 +145,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 }
+
 @media (max-width: 480px){
   .label {
     display: block;
@@ -153,5 +154,8 @@
     margin-bottom: 5px;
     color: #3c1053;
     margin-left: 30px;
+  }
+  .form-group{
+    text-align: left;
   }
 }
