--- a/frontend/src/styles/Login/Login.css
+++ b/frontend/src/styles/Login/Login.css
@@ -18,7 +18,7 @@
 
 .login-card:hover{
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.1);
-  transform: translateY(-3px);
+  /* transform: translateY(-3px); */
   background-color: #15121229;
 }
 /* Apply styles to the login card heading */
